1.修复fred数据CPI计算同比问题

--- a/date/qstock_cpi_trend_pyecharts.html
+++ b/date/qstock_cpi_trend_pyecharts.html
@@ -9,11 +9,11 @@
     
 </head>
 <body >
-    <div id="b5b51418234242e28e3a5550f598dc44" class="chart-container" style="width:1200px; height:600px; "></div>
+    <div id="78334d04d8a741b8aa76f60e9d35c245" class="chart-container" style="width:1200px; height:600px; "></div>
     <script>
-        var chart_b5b51418234242e28e3a5550f598dc44 = echarts.init(
-            document.getElementById('b5b51418234242e28e3a5550f598dc44'), 'chalk', {renderer: 'canvas'});
-        var option_b5b51418234242e28e3a5550f598dc44 = {
+        var chart_78334d04d8a741b8aa76f60e9d35c245 = echarts.init(
+            document.getElementById('78334d04d8a741b8aa76f60e9d35c245'), 'chalk', {renderer: 'canvas'});
+        var option_78334d04d8a741b8aa76f60e9d35c245 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -1225,7 +1225,7 @@
             "show": true,
             "text": "\u4e2d\u56fdCPI\u540c\u6bd4\u589e\u901f\u8d8b\u52bf\uff081980-2025\uff09",
             "target": "blank",
-            "subtext": "\u6570\u636e\u6765\u6e90\uff1aqstock\u5b8f\u89c2\u7ecf\u6d4e\u6570\u636e\u5e93 PPI\uff08\u751f\u4ea7\u8005\u4ef7\u683c\u6307\u6570\uff09",
+            "subtext": "\u6570\u636e\u6765\u6e90\uff1aqstock\u5b8f\u89c2\u7ecf\u6d4e\u6570\u636e\u5e93 CPI\uff08\u5c45\u6c11\u6d88\u8d39\u4ef7\u683c\u6307\u6570\uff09",
             "subtarget": "blank",
             "padding": 5,
             "itemGap": 10,
@@ -1249,7 +1249,7 @@
         }
     ]
 };
-        chart_b5b51418234242e28e3a5550f598dc44.setOption(option_b5b51418234242e28e3a5550f598dc44);
+        chart_78334d04d8a741b8aa76f60e9d35c245.setOption(option_78334d04d8a741b8aa76f60e9d35c245);
     </script>
 </body>
 </html>
