--- a/date/qstock_ppi_trend_pyecharts.html
+++ b/date/qstock_ppi_trend_pyecharts.html
@@ -9,11 +9,11 @@
     
 </head>
 <body >
-    <div id="dce587c98c5646189119a9a9a915c838" class="chart-container" style="width:1200px; height:600px; "></div>
+    <div id="dfb3029de41c419caeeedac7c2dcc6fc" class="chart-container" style="width:1200px; height:600px; "></div>
     <script>
-        var chart_dce587c98c5646189119a9a9a915c838 = echarts.init(
-            document.getElementById('dce587c98c5646189119a9a9a915c838'), 'chalk', {renderer: 'canvas'});
-        var option_dce587c98c5646189119a9a9a915c838 = {
+        var chart_dfb3029de41c419caeeedac7c2dcc6fc = echarts.init(
+            document.getElementById('dfb3029de41c419caeeedac7c2dcc6fc'), 'chalk', {renderer: 'canvas'});
+        var option_dfb3029de41c419caeeedac7c2dcc6fc = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -1345,7 +1345,7 @@
             "show": true,
             "text": "\u4e2d\u56fdPPI\u540c\u6bd4\u589e\u901f\u8d8b\u52bf\uff081980-2025\uff09",
             "target": "blank",
-            "subtext": "\u6570\u636e\u6765\u6e90\uff1aqstock\u5b8f\u89c2\u7ecf\u6d4e\u6570\u636e\u5e93 CPI\uff08\u5c45\u6c11\u6d88\u8d39\u4ef7\u683c\u6307\u6570\uff09",
+            "subtext": "\u6570\u636e\u6765\u6e90\uff1aqstock\u5b8f\u89c2\u7ecf\u6d4e\u6570\u636e\u5e93 PPI\uff08\u751f\u4ea7\u8005\u4ef7\u683c\u6307\u6570\uff09",
             "subtarget": "blank",
             "padding": 5,
             "itemGap": 10,
@@ -1369,7 +1369,7 @@
         }
     ]
 };
-        chart_dce587c98c5646189119a9a9a915c838.setOption(option_dce587c98c5646189119a9a9a915c838);
+        chart_dfb3029de41c419caeeedac7c2dcc6fc.setOption(option_dfb3029de41c419caeeedac7c2dcc6fc);
     </script>
 </body>
 </html>
